# Sunny_OS

./: Makefile  README.md  build.ps1  run.ps1
Simulator/: CMakeLists.txt
Simulator/host_win32/: sunny_os_host_win32.cpp
apps/: APP_CONTINUATION_PLAN.md  APP_DEV_GUIDE.md
apps/ai/: ai_model.h  ai_slice.cpp  ai_slice.h  ai_view.cpp  ai_view.h
apps/camera/: camera_model.h  camera_slice.cpp  camera_slice.h  camera_view.cpp  camera_view.h
apps/health/: health_slice.h
apps/maps/: maps_model.h  maps_slice.cpp  maps_slice.h  maps_view.cpp  maps_view.h
apps/music/: music_slice.h
apps/notes/: notes_slice.h
apps/placeholder/: placeholder_model.h  placeholder_slice_base.cpp  placeholder_slice_base.h  placeholder_view.cpp  placeholder_view.h
apps/radio/: radio_slice.h
apps/settings/: settings_slice.h
apps/translate/: translate_slice.h
apps/weather/: weather_slice.h
config/: ui_config.h
core/: app_controller.cpp  app_controller.h  app_entry.h  app_slice.h  status_bar_view.cpp  status_bar_view.h  theme.h
desktop/: desktop_model.cpp  desktop_model.h  desktop_slice.cpp  desktop_slice.h  desktop_view.cpp  desktop_view.h
docs/: ARCHITECTURE.md  CONFIG.md  NAMING.md  PORTING_GUIDE.md  README.md
launcher/: launcher_model.cpp  launcher_model.h  launcher_slice.cpp  launcher_slice.h  launcher_view.cpp  launcher_view.h
pages/: boot_page.cpp  boot_page.h  shutdown_page.cpp  shutdown_page.h
port/: system.h  system_win32.cpp  time.h  time_std.cpp
resources/: README.md  manifest.json
runtime/: vsun_app.cpp  vsun_app.h  vsun_layout.cpp  vsun_layout.h
services/: connectivity_service.cpp  connectivity_service.h  datacenter.cpp  datacenter.h  datacenter_topics.h  page_manager.cpp  page_manager.h  resource_pool.cpp  resource_pool.h  sensor_service.cpp  sensor_service.h  storage_service.cpp  storage_service.h  system_status_service.cpp  system_status_service.h  ui_publish_queue.cpp  ui_publish_queue.h
simulator_app/: App.cpp  App.h
simulator_app/Common/HAL/: HAL.cpp  HAL.h
sunny_hal/: hal.h  hal_sim.cpp
tools/assets/: gen_assets.py
